mdapi/Custom/objects/AM_Reporting__c.object
<CustomObject>
    <description>Stands for Asset Mgmt Reporting Object.  This was created as a summary reporting tool that looks up to portfolio, tip, rehab, yardi rent roll, residence.  This is primarily for Geopointe and the other mapping applications.</description>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <description>Look up Portfolio</description>
        <formula>Portfolio__r.Acquisition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Overhead__c</fullName>
        <formula>Portfolio__r.Acquisition_Overhead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Acquisition Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_PSF__c</fullName>
        <formula>Portfolio__r.Acquisition_Price_PSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Acquisition Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Status__c</fullName>
        <formula>TEXT( Portfolio__r.Acquisition_Status__c )</formula>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Acquisition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Acquisition_Price__c</fullName>
        <formula>Portfolio__r.Actual_Acquisition_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Actual Acquisition Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Lease_Amt__c</fullName>
        <formula>Yardi_Rent_Roll__r.Actual_Lease_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Actual Lease Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aging_Leased__c</fullName>
        <formula>IF( Post_Acq_Status__c = &quot;Leased&quot;, 

IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) ,

IF( Post_Acq_Status__c = &quot; &quot;, &quot;Instatus Transition&quot;, &quot;Instatus Transition&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging - Leased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_Leased_of_Days__c</fullName>
        <formula>IF(Post_Acq_Status__c = &quot;Leased&quot;,Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging - Leased # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_OTM_of_Days__c</fullName>
        <formula>IF(Post_Acq_Status__c = &quot;OTM&quot;, TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging - OTM # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Rehab_from_GC_Start_Date__c</fullName>
        <formula>IF(OR( 
BEGINS(TEXT( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;Closed&apos;) , 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;HOLD&apos;) , 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;Complete&apos;) 
), 

IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) 
, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging - Rehab from GC Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_Rehab_of_Days_from_GC_Start__c</fullName>
        <formula>IF(BEGINS(TEXT( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;Closed&apos;) , Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c,
IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;HOLD&apos;) , Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c,
IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c ), &apos;Complete&apos;),Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c,

TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Start_Date__c)))</formula>
        <label>Aging - Rehab # of Days from GC Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Rehab_of_Days_from_Re_key__c</fullName>
        <formula>IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;Closed&apos;) , Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c,
IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;HOLD&apos;) , Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c,
IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;Complete&apos;), Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c,
 
 
TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c)))</formula>
        <label>Aging - Rehab # of Days from Re-key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_TIP__c</fullName>
        <formula>IF( 
OR( 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c), &apos;TIP&apos;),
BEGINS( Yardi_Rent_Roll__r.Unit_Rental_Type__c , &apos;Admin&apos;), 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c), &apos;HOLD&apos;) 
), 
IF(TODAY() - Acquisition_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(TODAY() - Acquisition_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(TODAY() - Acquisition_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(TODAY() - Acquisition_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(TODAY() - Acquisition_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(TODAY() - Acquisition_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))), 

IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c), &apos;Closed&apos;), 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate) &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))), &quot;Instatus Transition&quot;
) 

)</formula>
        <label>Aging - TIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_TIP_of_Days__c</fullName>
        <formula>IF( BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c), &apos;TIP&apos;),TODAY() - Acquisition_Date__c,
IF( BEGINS( Yardi_Rent_Roll__r.Unit_Rental_Type__c , &apos;Admin&apos;), TODAY() - Acquisition_Date__c,
IF( BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c), &apos;HOLD&apos;), TODAY() - Acquisition_Date__c,
IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c), &apos;Closed&apos;),Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Closed_Date__c - DATEVALUE(CreatedDate),
NULL))))</formula>
        <label>Aging - TIP # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agining_OTM__c</fullName>
        <description>OTM Aged taken from Rehab</description>
        <formula>IF( Post_Acq_Status__c = &quot;OTM&quot;, 

IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(TODAY()  - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) ,


IF( Post_Acq_Status__c = &quot; &quot;, &quot;Instatus Transition&quot;, &quot;Instatus Transition&quot;))</formula>
        <inlineHelpText>Most Recent Rehab</inlineHelpText>
        <label>Aging - OTM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agining_Rehab_from_Rekey__c</fullName>
        <formula>IF(OR( 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;Closed&apos;) , 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;HOLD&apos;) , 
BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c), &apos;Complete&apos;) 
), 

IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 14,&apos;1-2 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 28,&apos;3-4 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(Portfolio__r.Residence__r.Most_Recent_Rehab__r.Office_Signoff_Date__c - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) 
, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 14, &apos;1-2 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 28, &apos;3-4 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 42, &apos;5-6 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 56, &apos;7-8 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &lt;= 70, &apos;9-10 Weeks&apos;, 
IF(TODAY() - Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging_Start_Date__c &gt;= 71, &apos;11-12+ Weeks&apos;, 
&quot;Instatus Transition&quot;)))))) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio__r.Residence__r.Most_Recent_Rehab__r.</inlineHelpText>
        <label>Aging - Rehab from Re-Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Est_Underwriting__c</fullName>
        <formula>Portfolio__r.All_In_Cost_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>All-In Cost Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asking_Rent_First_Lease__c</fullName>
        <formula>Portfolio__r.Asking_Rent_First_Lease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Asking Rent @ First Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BK_Status__c</fullName>
        <formula>Portfolio__r.BK_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>BK Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Est_UW__c</fullName>
        <formula>Portfolio__r.Back_Taxes_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Back Taxes Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <formula>Portfolio__r.Baths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Bathrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <formula>Portfolio__r.Bedrooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense_Est_UW__c</fullName>
        <formula>Portfolio__r.Bid_Service_Expense_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Bid Service Expense Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <formula>TEXT( Portfolio__r.Bid_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Bid Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Folder_ID__c</fullName>
        <formula>Portfolio__r.Box_Folder_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Folder ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Expense_Est_UW__c</fullName>
        <formula>Portfolio__r.Broker_Expense_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Broker Expense Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Revised__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Budget_Revised__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Most Recent Rehab</inlineHelpText>
        <label>Budget - Revised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFK_Est_UW__c</fullName>
        <formula>Portfolio__r.CFK_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>CFK Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price_PSF__c</fullName>
        <formula>Portfolio__r.Contract_Price_PSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Contract Price PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Tenant_Status__c</fullName>
        <formula>Yardi_Rent_Roll__r.Current_Tenant_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Current Tenant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Monthly_Rent_UW__c</fullName>
        <formula>Portfolio__r.Exp_Gross_Monthly_Rent_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Expected Gross Monthly Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <formula>Portfolio__r.Fund__c</formula>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Custom_Field_1__c</fullName>
        <formula>Acquisition_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Field 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Field_2__c</fullName>
        <formula>IF( ISPICKVAL( Portfolio__r.Acquisition_Status__c, &quot;For Sale&quot;),&quot;For Sale&quot;, 
IF(AND(ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c,&quot;Closed - Leased (Assumed&quot;),ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Closed - Cancelled&quot;)), &quot;Rehab&quot;,
 IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Applicant&quot; ), &quot;Leased&quot;,
 IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Future&quot; ), &quot;Leased&quot;,
 IF(BEGINS(TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c) , &quot;TIP&quot;),&quot;TIP&quot;, 
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Abd. Property Notice&quot;),&quot;TIP&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - BK&quot;),&quot;TIP&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Deed&quot;),&quot;TIP&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Limbo&quot;),&quot;TIP&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Do Not Contact&quot;),&quot;TIP&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Re-key Ready&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Sent to Locksmith&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Re-key Complete&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Front-End Assigned&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs Final Budget&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs Vendors&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs GC&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;GC Awarded&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Five Day Complete&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Final Inspection Pass&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - BK&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Other&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Utilities&quot;), &quot;Rehab&quot;,
 IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Occupied/TIP&quot;), &quot;TIP&quot;,
 IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c = &quot;Current&quot;, &quot;Leased&quot;, 
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c = &quot;Eviction&quot;, &quot;Leased&quot;, 
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c = &quot;Notice&quot;, &quot;Leased&quot;, 
IF( Yardi_Rent_Roll__r.Current_Tenant_Status__c = &quot;VACANT&quot;, &quot;OTM&quot;, 

&quot;Not Segmented&quot;))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Field 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Field_3__c</fullName>
        <formula>IF( ISPICKVAL( Portfolio__r.Acquisition_Status__c, &quot;For Sale&quot;),&quot;For Sale&quot;, 
IF(AND(ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c,&quot;Closed - Leased (Assumed&quot;),ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Closed - Cancelled&quot;)), &quot;Rehab&quot;, 
IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Applicant&quot; ), &quot;Leased&quot;, 
IF(AND(Yardi_Rent_Roll__r.Unit_Rental_Type__c= &quot;Residential&quot;,Yardi_Rent_Roll__r.Current_Tenant_Status__c= &quot;Future&quot; ), &quot;Leased&quot;, 
IF( BEGINS( TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c) , &quot;TIP&quot;),&quot;TIPPY&quot;, 

IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Abd. Property Notice&quot;),&quot;TIP&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - BK&quot;),&quot;TIP&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Deed&quot;),&quot;TIP&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Limbo&quot;),&quot;TIP&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Tip__r.TIP_Status__c ,&quot;HOLD - Do Not Contact&quot;),&quot;TIP&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Re-key Ready&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Sent to Locksmith&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Re-key Complete&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Front-End Assigned&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs Final Budget&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs Vendors&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Needs GC&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;GC Awarded&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Five Day Complete&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;Final Inspection Pass&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - BK&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Deed&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Other&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Utilities&quot;), &quot;Rehab&quot;, 
IF( ISPICKVAL( Portfolio__r.Residence__r.Most_Recent_Rehab__r.Stage__c,&quot;HOLD - Occupied/TIP&quot;), &quot;TIP&quot;, 

&quot;Not Segmented&quot;)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Field 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Award_Start_Date__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.Rehab_Aging__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GC Award/Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Completion_Date_Est__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.GC_Completion_Date_Est__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Most Recent Rehab</inlineHelpText>
        <label>GC Completion Date - Estimated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GC_Completion_Date_Revised__c</fullName>
        <formula>Portfolio__r.Residence__r.Most_Recent_Rehab__r.GC_Completion_Date_Revised__c</formula>
        <inlineHelpText>Most Recent Rehab</inlineHelpText>
        <label>GC Completion Date - Revised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Bed_Bath__c</fullName>
        <formula>Portfolio__r.GP_Bed_Bath__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>GP Bed Bath</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Status__c</fullName>
        <formula>Portfolio__r.GP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>GP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Yield_Bucket__c</fullName>
        <formula>Portfolio__r.GP_Yield_Bucket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>GP Yield Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_Est_UW__c</fullName>
        <formula>Portfolio__r.Gross_Yield_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Gross Yield Est. @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HOA_Options__c</fullName>
        <formula>Portfolio__r.HOA_Options__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>HOA Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Front_Thumbnail_Url__c</fullName>
        <formula>&apos;https://&apos; + IF( CONTAINS($Organization.Id, &apos;E0000000YNkj&apos;), &apos;ih-prod&apos;, &apos;ih-sandbox&apos; ) + &apos;.s3.amazonaws.com/&apos; + CASESAFEID( $Organization.Id ) + &apos;/&apos; + Portfolio__r.Home_Front_Thumbnail_Url_Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Front Thumbnail Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Rent__c</fullName>
        <formula>Yardi_Rent_Roll__r.Housing_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Housing Authority Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Lease_up_Cost_Est_UW__c</fullName>
        <formula>Portfolio__r.Initial_Lease_up_Cost_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Initial Lease-up Cost Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Period_End_Current_Tenant__c</fullName>
        <formula>Yardi_Rent_Roll__r.Lease_Period_End_Current_Tenant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Current Tenant Lease Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Period_Start_Current_Tenant__c</fullName>
        <formula>Yardi_Rent_Roll__r.Lease_Period_Start_Current_Tenant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Current Tenant Lease Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_TIP_Status__c</fullName>
        <formula>Yardi_Rent_Roll__r.Lease_TIP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Lease TIP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <formula>TEXT(Portfolio__r.Residence__r.Most_Recent_Tip__r.Lease_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Most Recent TIP</inlineHelpText>
        <label>Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liens_Fines_Est_UW__c</fullName>
        <formula>Portfolio__r.Liens_Fines_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>Liens/Fines Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Expense_Margin__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio</inlineHelpText>
        <label>M1 Expense Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make_Ready_Complete_Date__c</fullName>
        <formula>Yardi_Rent_Roll__r.Make_Ready_Complete_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Make Ready Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Ready_Start_Date__c</fullName>
        <formula>Yardi_Rent_Roll__r.Make_Ready_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yardi Rent Roll</inlineHelpText>
        <label>Make Ready Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>